--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ font-size: 30px;
 .balk a {
     float: left;
     display: block;
+    font-size: 50px;
     color: black;
     text-align: center;
     padding: 14px 16px;
