--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .boxmodel{
-  background-color: grey;
+  background-color: white;
   padding-top: 30px;
   padding-left: 100px;
   padding-right: 100px;
